test/ReverseProxy.Kubernetes.Tests/testassets/https/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    yarp.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: frontend
subsets:
  - addresses:
    - ip: 10.244.2.38
    ports:
    - name: https
      port: 443
      protocol: TCP
