test/ReverseProxy.Kubernetes.Tests/testassets/https/routes.json
[
  {
    "RouteId": "/foo",
    "Match": {
      "Methods": null,
      "Hosts": [],
      "Path": "/foo/{**catch-all}",
      "Headers": null
    },
    "Order": null,
    "ClusterId": "frontend:443",
    "AuthorizationPolicy": null,
    "CorsPolicy": null,
    "Metadata": null,
    "Transforms": null
  }
]
